2021-09-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release

	* src/calendars.cpp (getCalendar): Support new UnitedStates calendars
	'LiborImpact' and 'FederalReserve'
	* src/calendars.cpp (getCalendar): Support new calendars 'France' (same
	as 'France/Settlement') and 'France/Exchange'

2021-09-26  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/docker.yaml: Add action to build and push
	containers with cron set to monthly schedule

2021-09-02  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.13

	* configure.ac: Idem
	* configure: Idem

	* man/*.R: Update remaining http:// URLs to https://
	* man/ConvertibleBond.Rd: Wrap \dontrun{} around example as it runs
	twice as long as CRAN preference for five second examples
	* man/FittedBondCurve.Rd: Idem

2021-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release

	* src/bonds.cpp (fittedBondCurveEngine): Use Actual365Fixed() instead
	of deprecated ActualActual()
	* src/discount.cpp (discountCurveEngine):  Idem
	* src/utils.cpp (rebuildCurveFromZeroRates): Idem
	* src/zero.cpp (zbtyield): Idem

	* src/utils.cpp (buildTermStructure): Switch to
	ActualActual::Convention::ISDA in ctor following
	(getDayCounter): Condition away ActualActual() and Thirty360()

	* man/BondUtilities.Rd: Document that ActualActual() and Thirty360()
	can be enabled locally via #define

2021-08-17  Dirk Eddelbuettel  <edd@debian.org>

	* man/Enum.Rd: Correct eleven-year old typo

2021-07-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release

	* README.md: Add note about usability with new QuantLib versions

2021-06-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add repo to URL field

2021-01-18  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge
