@@ -1,7 +1,7 @@
 
 //  RQuantLib -- R interface to the QuantLib libraries
 //
-//  Copyright (C) 2002 - 2020  Dirk Eddelbuettel
+//  Copyright (C) 2002 - 2021  Dirk Eddelbuettel
 //  Copyright (C) 2010         Dirk Eddelbuettel and Khanh Nguyen
 //
 //  RQuantLib is free software: you can redistribute it and/or modify
@@ -31,6 +31,19 @@ QuantLib::ext::shared_ptr<QuantLib::Calendar> getCalendar(const std::string &cal
 
     } else if (calstr == "Australia") {
         pcal.reset(new QuantLib::Australia());
+
+    } else if (calstr == "Austria" || calstr == "Austria/Settlement") {
+        pcal.reset(new QuantLib::Austria());
+    } else if (calstr == "Austria/Exchange") {
+        pcal.reset(new QuantLib::Austria(QuantLib::Austria::Exchange));
+
+    } else if (calstr == "Bespoke") {
+        pcal.reset(new QuantLib::BespokeCalendar());
+
+    } else if (calstr == "Botswana") {
+        pcal.reset(new QuantLib::Botswana());
+    } else if (calstr == "Botswana") {
+        pcal.reset(new QuantLib::Botswana());
 
     } else if (calstr == "Brazil") {
         pcal.reset(new QuantLib::Brazil());
@@ -81,6 +94,11 @@ QuantLib::ext::shared_ptr<QuantLib::Calendar> getCalendar(const std::string &cal
     } else if (calstr == "Indonesia") {
         pcal.reset(new QuantLib::Indonesia());
 
+    } else if (calstr == "Israel" || calstr == "Israel/Settlement") {
+        pcal.reset(new QuantLib::Israel(QuantLib::Israel::Settlement));
+    } else if (calstr == "Israel/TASE") {
+        pcal.reset(new QuantLib::Israel(QuantLib::Israel::TASE));
+
     } else if (calstr == "Italy" || calstr == "Italy/Settlement") {
         pcal.reset(new QuantLib::Italy(QuantLib::Italy::Settlement));
     } else if (calstr == "Italy/Exchange") {
@@ -100,6 +118,11 @@ QuantLib::ext::shared_ptr<QuantLib::Calendar> getCalendar(const std::string &cal
 
     } else if (calstr == "Poland") {
         pcal.reset(new QuantLib::Poland());
+
+    } else if (calstr == "Romania" || calstr == "Romania/Public") {
+        pcal.reset(new QuantLib::Romania(QuantLib::Romania::Public));
+    } else if (calstr == "Romania/BVB") {
+        pcal.reset(new QuantLib::Romania(QuantLib::Romania::BVB));
 
     } else if (calstr == "Russia") {
         pcal.reset(new QuantLib::Russia());
@@ -129,6 +152,9 @@ QuantLib::ext::shared_ptr<QuantLib::Calendar> getCalendar(const std::string &cal
 
     } else if (calstr == "Taiwan") {
         pcal.reset(new QuantLib::Taiwan());
+
+    } else if (calstr == "Thailand") {
+        pcal.reset(new QuantLib::Thailand());
 
     } else if (calstr == "Turkey") {
         pcal.reset(new QuantLib::Turkey());
