@@ -1,3 +1,8 @@
+2021-09-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/calendars.cpp (getCalendar): Add Austria (plus Exchange),
+	Bespoke, Botswana, Israel (plus TASE), Romania (plus BVB), Thailand
+
 2021-09-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor release
